# opendeck-k1pro

./: 40-opendeck-k1pro.rules  AGENTS.md  Cargo.toml  README.md  justfile  manifest.json
assets/propertyInspector/: backlight.html
docs/: k1pro_hardware_reference.md  libtransport_disassembly_report.md  profile_switching.md  standalone_mode.md
src/: device.rs  main.rs  mappings.rs  transport.rs  watcher.rs
