[package]
name = "opendeck-k1pro"
version = "0.1.0"
edition = "2024"
authors = ["Rodrigo Leven <rodrigo.leven@gmail.com>"]


[dependencies]
data-url = "0.3.1"
futures-lite = "2.6.0"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg"] }
log = "0.4.27"
openaction = "1.1.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
libloading = "0.8"
libc = "0.2"
serde_json = "1.0"

